<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigationTo_home"
        android:name="com.example.intermediate_baru.STORY.HOME.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigationTo_calculator"
        android:name="com.example.intermediate_baru.STORY.CALCULATOR.calculator"
        android:label="@string/title_calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/navigationTo_camera"
        android:name="com.example.intermediate_baru.STORY.CAMERA.Camera"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigationTo_resep"
        android:name="com.example.intermediate_baru.STORY.RESEP.MAIN.Resep"
        android:label="@string/title_resep"
        tools:layout="@layout/fragment_resep" />

    <fragment
        android:id="@+id/navigationTo_profile"
        android:name="com.example.intermediate_baru.STORY.PROFILE.Profile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>